--- a/src/assets/css/panels/settings.css
+++ b/src/assets/css/panels/settings.css
@@ -117,6 +117,10 @@
     justify-content: space-evenly;
 }
 
+hr {
+    border-color: var(--element-color);
+}
+
 /*******************************************************************************
  *                                                                             *
  * account tab                                                                 *
@@ -382,6 +386,34 @@
 
 .size-btn:hover {
     background: var(--hover-element-color);
+}
+
+/*******************************************************************************
+ *                                                                             *
+ * Credits tab                                                              *
+ *                                                                             *
+ ******************************************************************************/
+
+.credits-elements-box {
+    background: var(--background-element);
+    width: 80%;
+    border-radius: 10px;
+    padding: 1.5rem 2rem;
+    margin: 0.5rem;
+    text-align: center;
+}
+
+.credits-subtext {
+    font-size: 0.9rem;
+    opacity: .8;
+}
+
+#credits-tab a {
+    background: linear-gradient(to right, var(--gradient-color-a), var(--gradient-color-b));
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    opacity: 1;
 }
 
 /*******************************************************************************
